--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,11 +1,12 @@
-<div>
-  <span x-large>Your Content Here</span>
-  <input type="text" [value]="data.value" (input)="data.value = $event.target.value" autofocus>
+<div class="row">
   <!--
-    Rather than wiring up two-way data-binding ourselves
-    we can use Angular's [(ngModel)] syntax
-    <input type="text" [(ngModel)]="title.value">
+  Rather than wiring up two-way data-binding ourselves
+  we can use Angular's [(ngModel)] syntax
+  <input type="text" [(ngModel)]="title.value">
   -->
-
-  <pre>this.data = {{ data | json }}</pre>
+  <div class="col-md-3 col-md-offset-2"><span x-large>Your Content Here</span></div>
+  <div class="col-md-7"><input type="text" [value]="data.value" (input)="data.value = $event.target.value" autofocus></div>
+</div>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2"><pre>this.data = {{ data | json }}</pre></div>
 </div>
